IGNITE-6730 Java 9: fix project build procedure  * additional fixed for running ignite scripts