@@ -143,6 +143,7 @@ JVM_OPTS="--add-exports java.base/jdk.internal.misc=ALL-UNNAMED \
           --add-exports java.base/sun.nio.ch=ALL-UNNAMED \
           --add-exports java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
           --add-exports jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
+          --add-modules java.xml.bind \
       ${JVM_OPTS}"
 } || true
 
